# pvtlib

./: .gitignore  README.md  add_license.py  debug_tests.py  pyproject.toml  requirements.txt  requirements_build.txt  setup.py  test.py
.github/: copilot-instructions.md
.github/workflows/: build-and-distribute-test.yml  build-and-distribute.yml  python-package-run-tests.yml  validate-version.yml
examples/: README.md  calibration curve interpolation.py  critical_velocity_for_homogeneous_mixture_oil_water.py  gas_metering_venturi.py  gas_properties_from_aga8.py  gas_properties_from_measured_sos.py  isenthalpic_and_isentropic_gas_properties  properties_from_measured_sos.py  properties_from_sos_example.py  wetgas_venturi_overread_ReaderHarris.py
examples/01 Gas Properties from AGA8/: README.md  gas_properties_from_aga8.py
examples/02 Gas Metering Venturi/: README.md  gas_metering_venturi.py
examples/03 Calibration Curve Interpolation/: README.md  calibration_curve_interpolation.py
examples/04 Critical Velocity for Homogeneous Mixture Oil Water/: README.md
examples/05 Gas Properties from Measured SOS/: README.md
examples/06 Isenthalpic and Isentropic Gas Properties/: README.md  isenthalpic_and_isentropic_gas_properties.py
examples/07 Water in Oil/: README.md  water_in_oil.py
examples/08 Wetgas Venturi Overread Reader Harris/: README.md
examples/09 Gas Density Meter Corrections/: README.md  gas_density_meter_corrections.py
examples/10 Gas Mixing Calculation/: README.md  gas_mixing_calculation.ipynb
examples/11 Compressor Performance Calculations/: README.md  (+1 more)
pvtlib/: __init__.py  aga8.py  fluid_mechanics.py  main.py  metering.py  thermodynamics.py  unit_converters.py  utilities.py
tests/: test_aga8.py  test_compressors.py  test_coriolis_flowmeters.py  test_differential_pressure_flowmeters.py  test_fluid_mechanics.py  test_gas_density_meters.py  test_level_measurement.py  test_metering.py  test_separators.py  test_thermodynamics.py  test_unit_converters.py  test_utilities.py  test_valves.py  test_venturi_wetgas_corrections.py
(+18 files in other folders)
