[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "pvtlib"
version = "1.14.2"
authors = [
    {name = "Christian Hågenvik", email = "chaagen2013@gmail.com"},
]
description = "A library containing various tools in the categories of thermodynamics, fluid mechanics, metering etc."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.9"
keywords = ["thermodynamics", "fluid-mechanics", "metering", "aga8"]
classifiers = [
    "Programming Language :: Python :: 3",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
]
dependencies = [
    "numpy>=1.26.2",
    "scipy>=1.11.4",
    "pyaga8>=0.1.15",
]

[project.urls]
Homepage = "https://github.com/equinor/pvtlib"

[tool.setuptools.packages.find]
include = ["pvtlib*"]
